# gw2-zone-map

./: .gitignore  README.md  gw2_zone_map.py  main.py  pyproject.toml  requirements.pip  requirements.txt  sandbox.py
data/: __init__.py  continents.py  layouts.py  maps.py  portals.py  sectors.py  zones.py
map/: map_generator.py  map_overlay.py
mapgen/: __init__.py  data_api.py  map_composite.py  map_coordinates.py  map_generator.py  map_overlay.py
mapgen/overlay/: __init__.py  mastery_overlay.py  overlay_util.py  zone_overlay.py
