[project]
name = "gw2-zone-map"
version = "0.1.0"
description = ""
authors = [
    {name = "keirbhaltair",email = "keirbhaltair@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi (>=2026.1.4,<2027.0.0)",
    "charset-normalizer (>=3.4.4,<4.0.0)",
    "idna (>=3.11,<4.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "urllib3 (>=2.6.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
